# skill-tree

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  DESIGN.md  NOTICE  README.md  agent_docs.py  harnesses.py  hub.py  mcp_adapters.py  permission_adapters.py  permission_presets.py  permissions.py  registry.example.yaml  remotes.py  requirements.txt  risks.py  skill_hub_mcp_server.py  snippets.py  subagent_codex.py  subagent_links.py  subagents.py
app/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: agent_docs.rs  bootstrap.rs  fs.rs  global_docs.rs  harnesses.rs  hub.rs  mod.rs  permissions.rs  projects.rs  registry.rs  remotes.rs  snippets.rs  subagents.rs
app/src-tauri/tests/: command_async_conformance.rs
connectors/: __init__.py  base.py  discovery.py  drift.py  hermes.py  sidecar.py  signing.py
docs/: ADDING-SKILLS.md  AGENT-DOCS.md  SKILL-SCHEMA.md  SNIPPETS.md  distribution.md  permissions.md  remote-connectors.md  subagents.md
scripts/: bump-version.sh  fetch-python-runtime.sh  rebuild-skill-tree-app.sh  smoke-test-bundle.sh  vendor-deps.sh
tests/: conftest.py  test_agent_docs_canonical.py  test_agent_docs_policy.py  test_agent_tooling_layer0.py  test_auto_sync.py  test_bootstrap.py  test_bootstrap_codex_legacy.py  test_connector_discovery.py  test_global_mcp_dispatch.py  test_harness_cli.py  test_harness_migration.py  test_harness_sync.py  test_harnesses.py  test_hermes_connector.py  test_http_mcp_tool_error.py  test_import_scanner.py  (+44 more)
(+323 files in other folders)
